@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2022 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2023 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -165,11 +165,6 @@
 #	define PENDIN LNEW_PENDIN
 #  endif /* !PENDIN */
 #endif /* LNEW_PENDIN */
-#ifndef ECHOCTL
-#   ifndef VEOL
-#	define RAWONLY	1
-#   endif /* !VEOL */
-#endif /* !ECHOCTL */
 
 #ifdef _sys_filio
 #   ifndef FIONREAD
